--- a/style.css
+++ b/style.css
@@ -1,10 +1,69 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  background-color: #2c2141;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+}
+
+.main {
+  background-color: #f8f8f8;
+  border-radius: 16px;
+  padding: 32px;
+  width: 624px;
+  margin: 16px;
+}
+
+.person {
+
+}
+
+.person__description {
+    margin: 0;
+    font-size: 16px;
+    line-height: 22px;
   }
   
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
+  .person__description--with-margin {
+    margin-top: 22px;
   }
   
+
+.person__info {
+  margin-bottom: 24px;
+  
+}
+
+.person__link {
+    color: #E20613;
+    text-decoration: none;
+}
+
+.person__name {
+  margin: 0;
+  font-size: 36px;
+  font-weight: normal;
+}
+.person__position {
+  margin: 0;
+  color: #545454;
+  font-size: 18px;
+  font-style: italic;
+}
+
+.special {
+    color: #ED6D05;
+    font-weight: normal;
+}
+
