--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html {
 body {
   background-color: #2c2141;
   display: flex;
+  align-items: center;
   justify-content: center;
-  align-content: center;
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
 }
@@ -20,34 +20,34 @@ body {
 .main {
   background-color: #f8f8f8;
   border-radius: 16px;
+  display: flex;
   padding: 32px;
   width: 624px;
   margin: 16px;
 }
 
 .person {
-
+  display: flex;
+  align-items: flex-start;
 }
 
 .person__description {
-    margin: 0;
-    font-size: 16px;
-    line-height: 22px;
-  }
-  
-  .person__description--with-margin {
-    margin-top: 22px;
-  }
-  
+  margin: 0;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.person__description--with-margin {
+  margin-top: 22px;
+}
 
 .person__info {
   margin-bottom: 24px;
-  
 }
 
 .person__link {
-    color: #E20613;
-    text-decoration: none;
+  color: #e20613;
+  text-decoration: none;
 }
 
 .person__name {
@@ -62,8 +62,14 @@ body {
   font-style: italic;
 }
 
-.special {
-    color: #ED6D05;
-    font-weight: normal;
+.person__picture {
+  margin-right: 32px;
+  width: 148px;
+  height: 148px;
+  border-radius: 74px;
 }
 
+.special {
+  color: #ed6d05;
+  font-weight: normal;
+}
